# TROP

./: .gitignore  CHANGELOG.md  Dockerfile.linux-build  README.md  README_CN.md  build.sh  build_mlib.do  build_ssc_zip.sh  cross-build-linux.sh  ltrop.mlib  run_bench.sh  ssc_email.md  ssc_submission.txt  trop.pkg
.github/workflows/: build-plugins.yml
ado/: _trop_estat_distance.ado  _trop_estat_eventstudy.ado  _trop_estat_pretrend.ado  _trop_estat_table.ado  trop.ado  trop.sthlp  trop_estat_bootstrap.ado  trop_estat_sensitivity.ado  trop_estat_weights.ado  trop_windows_x64.plugin
docs/: advanced.md
mata/: trop_data_transfer.mata  trop_ereturn_store.mata  trop_estat_helpers.mata  trop_eventstudy.mata  trop_main.mata  trop_rust_interface.mata
plugin/: stata_bridge.c  stata_bridge.h
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/benches/: distance_bench.rs
rust/examples/: bench_loocv.rs  bench_loocv_simulated.rs
rust/proptest-regressions/: distance.txt  estimation.txt
rust/src/: bootstrap.rs  distance.rs  error.rs  estimation.rs  lib.rs  loocv.rs  weights.rs
tests/: generate_survey_test_data.py  test_rao_wu_bootstrap.do  test_rao_wu_bootstrap_parity.py
