[package]
name = "trop_core"
version = "1.2.0"
edition = "2021"
description = "TROP (Triply Robust Panel) estimator core algorithms for Stata"
license = "AGPL-3.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
ndarray = "0.15"
faer = "0.22"
rayon = "1.8"
rand = "0.8"
rand_xoshiro = "0.6"
thiserror = "1.0"

# LAPACK for least squares (dgelsd)
lapack = "0.19"

# ===== Platform-specific BLAS/LAPACK backends =====

# macOS: Accelerate framework (built-in, high performance)
[target.'cfg(target_os = "macos")'.dependencies]
lapack-src = { version = "0.10", features = ["accelerate"] }

# Linux: OpenBLAS system library (apt install libopenblas-dev)
[target.'cfg(target_os = "linux")'.dependencies]
lapack-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["system"] }

# Windows: uses faer (pure-Rust SVD) — no external BLAS/LAPACK needed.
# This enables cross-compilation from macOS without requiring Intel MKL download.

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proptest = "1.4"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "distance_bench"
harness = false

# ===== Release profile optimization =====
[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link-time optimization (reduces size 10-20%)
codegen-units = 1    # Single codegen unit for better optimization
panic = "unwind"     # Required for catch_unwind in catch_panic! macro
strip = true         # Strip symbols
